tests/negative/gold/lambda2-test.gold
tests/negative/lambda2-test.toit:7:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/lambda2-test.toit:8:15: error: Unresolved identifier: 'unresolved'
  lambda.call unresolved
              ^~~~~~~~~~
Compilation failed
